@@ -6,6 +6,8 @@ EXTRA_PROGRAMS = parsestreams parsesolaris
 noinst_PROGRAMS = @MAKE_PARSEKMODULE@
 CLEANFILES = libparse.a libparse_kernel.a
 
+K_CFLAGS = -DPARSESTREAM -DNTP_NEED_BOPS
+
 libparse_a_SOURCES = parse.c \
                      parse_conf.c \
                      clk_meinberg.c \
@@ -52,82 +54,82 @@ info_trimble.c: $(top_srcdir)/include/trimble.h mkinfo_rcmd.sed mkinfo_scmd.sed
 	sed -n -f mkinfo_rcmd.sed $(top_srcdir)/include/trimble.h >> info_trimble.c || rm -f info_trimble.c
 
 kclk_computime.o: clk_computime.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_computime.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_computime.c -o $@
 
 kclk_computime_.o: clk_computime_.c
-	$(COMPILE) -DPARSESTREAM -c clk_computime_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_computime_.c -o $@
 
 kclk_dcf7000.o: clk_dcf7000.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_dcf7000.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_dcf7000.c -o $@
 
 kclk_dcf7000_.o: clk_dcf7000_.c
-	$(COMPILE) -DPARSESTREAM -c clk_dcf7000_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_dcf7000_.c -o $@
 
 kclk_hopf6021.o: clk_hopf6021.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_hopf6021.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_hopf6021.c -o $@
 
 kclk_hopf6021_.o: clk_hopf6021_.c
-	$(COMPILE) -DPARSESTREAM -c clk_hopf6021_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_hopf6021_.c -o $@
 
 kclk_meinberg.o: clk_meinberg.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_meinberg.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_meinberg.c -o $@
 
 kclk_meinberg_.o: clk_meinberg_.c
-	$(COMPILE) -DPARSESTREAM -c clk_meinberg_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_meinberg_.c -o $@
 
 kclk_rawdcf.o: clk_rawdcf.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_rawdcf.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_rawdcf.c -o $@
 
 kclk_rawdcf_.o: clk_rawdcf_.c
-	$(COMPILE) -DPARSESTREAM -c clk_rawdcf_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_rawdcf_.c -o $@
 
 kclk_rcc8000.o: clk_rcc8000.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_rcc8000.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_rcc8000.c -o $@
 
 kclk_rcc8000_.o: clk_rcc8000_.c
-	$(COMPILE) -DPARSESTREAM -c clk_rcc8000_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_rcc8000_.c -o $@
 
 kclk_schmid.o: clk_schmid.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_schmid.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_schmid.c -o $@
 
 kclk_schmid_.o: clk_schmid_.c
-	$(COMPILE) -DPARSESTREAM -c clk_schmid_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_schmid_.c -o $@
 
 kclk_trimtaip.o: clk_trimtaip.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_trimtaip.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_trimtaip.c -o $@
 
 kclk_trimtaip_.o: clk_trimtaip_.c
-	$(COMPILE) -DPARSESTREAM -c clk_trimtaip_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_trimtaip_.c -o $@
 
 kclk_trimtsip.o: clk_trimtsip.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_trimtsip.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_trimtsip.c -o $@
 
 kclk_trimtsip_.o: clk_trimtsip_.c
-	$(COMPILE) -DPARSESTREAM -c clk_trimtsip_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_trimtsip_.c -o $@
 
 kclk_varitext.o: clk_varitext.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_varitext.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_varitext.c -o $@
 
 kclk_varitext_.o: clk_varitext_.c
-	$(COMPILE) -DPARSESTREAM -c clk_varitext_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_varitext_.c -o $@
 
 kclk_wharton.o: clk_wharton.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/clk_wharton.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/clk_wharton.c -o $@
 
 kclk_wharton_.o: clk_wharton_.c
-	$(COMPILE) -DPARSESTREAM -c clk_wharton_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c clk_wharton_.c -o $@
 
 kparse.o: parse.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/parse.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/parse.c -o $@
 
 kparse_.o: parse_.c
-	$(COMPILE) -DPARSESTREAM -c parse_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c parse_.c -o $@
 
 kparse_conf.o: parse_conf.c
-	$(COMPILE) -DPARSESTREAM -c $(srcdir)/parse_conf.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c $(srcdir)/parse_conf.c -o $@
 
 kparse_conf_.o: parse_conf_.c
-	$(COMPILE) -DPARSESTREAM -c parse_conf_.c -o $@
+	$(COMPILE) $(K_CFLAGS) -c parse_conf_.c -o $@
 
 parsestreams.loadable_module.o: $(parsestreams_OBJECTS) libparse_kernel.a ../libntp/libntp.a
 	$(LD) -r -o $@ $(parsestreams_OBJECTS) libparse_kernel.a ../libntp/libntp.a
